fixed text wrapping

--- a/components.css
+++ b/components.css
@@ -19,7 +19,7 @@
   bottom:16px;
   display:flex;
   gap:32px;
-  max-width:540px;
+  max-width:900px;
   width:100%;
   justify-content:center;
   align-items:flex-end;
